[gd_scene load_steps=3 format=3 uid="uid://bcs1dnexdxvcl"]

[ext_resource type="Theme" uid="uid://cyusk16m2fbev" path="res://ui_theme.tres" id="1_lvmhe"]
[ext_resource type="Script" path="res://pause_menu.gd" id="2_u865q"]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "1_lvmhe" )
script = ExtResource( "2_u865q" )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.498039)

[node name="PausedLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 382.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 78
text = "Paused
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -472.0
offset_right = 204.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 0
text = "Resume"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -334.0
offset_right = 204.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -191.0
offset_right = 204.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
